--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "NODE_ENV=development webpack-dev-server --open | nodemon server/server.js "
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.12.3",
     "prop-types": "^15.6.1",
     "react": "^17.0.2",
