--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack",
+    "start": "node server/server.js",
+    "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack-dev-server --open | nodemon server/server.js "
   },
   "dependencies": {
